<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_c">C</string>
    <string name="btn_posneg">+/−</string>
    <string name="btn_per">%</string>
    <string name="btn_del">DEL</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="sym_dot">.</string>
    <string name="btn_eql">=</string>
    <string name="btn_div">÷</string>
    <string name="btn_mul">×</string>
    <string name="btn_sub">−</string>
    <string name="btn_add">+</string>

    <string name="err_div0">Cannot divide by zero</string>

    <string name="nav_open">Nav Open</string>
    <string name="nav_close">Nav Close</string>

    <string name="nav_history">History</string>
    <string name="nav_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_name">Yang Gao</string>
    <string name="about_date">Feb. 20, 2019</string>
    <string name="about_desc">CEJV 669 Assignment 1 - Calculator</string>
    <string name="about_email">Email me at: yanggao1898@gmail.com</string>
    <string name="email_address">yanggao1898@gmail.com</string>

</resources>
