<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calc_about"
    android:background="?android:attr/windowBackground"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_about_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_name" />

        <TextView
            android:id="@+id/tv_about_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_date" />

        <TextView
            android:id="@+id/tv_about_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_desc" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="about_email"
            android:text="@string/about_email" />
    </LinearLayout>
</FrameLayout>